--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
-
     "@heroui/tabs": "^2.2.13",
-
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "intl-messageformat": "^10.7.15",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
-
+    "recharts": "^2.15.1",
     "run-parallel": "^1.2.0",
-
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
